--- a/app.json
+++ b/app.json
@@ -5,11 +5,9 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
-
-  "scripts":{
-    "postdeploy":"bin/bootstrap"
+  "scripts": {
+    "postdeploy":"rake db:setup && bin/bootstrap"
   },
-
   "env": {
     "HEROKU_APP_NAME": {
       "required": true
