--- a/app.json
+++ b/app.json
@@ -5,15 +5,13 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
-  "scripts": {
-    "postdeploy":"node test.js"
-  },
   "env": {
     "HEROKU_APP_NAME": {
       "required": true
     },
     "HEROKU_PARENT_APP_NAME": {
       "required": true
-  }
+    },
+    "DONT_INHERIT_THIS_CONFIG_VAR": "HEROKU_APP_NAME"
   }
 }
