--- a/app.json
+++ b/app.json
@@ -5,12 +5,12 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
-  "env": {
-    "HEROKU_APP_NAME": {
-      "required": true
-    },
-    "HEROKU_PARENT_APP_NAME": {
-      "required": true
+  "scripts":{
+    "postdeploy":"rake dev:bootstrap"
+  },
+  "env":{
+    "HEROKU_API_TOKEN":{
+      "required":true
     }
   }
 }
