--- a/app.json
+++ b/app.json
@@ -5,16 +5,16 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
-  
-  "env":{
-    "URL":{
-      "required":true
-    },
-    "CBT_USER":{
-      "required":true
-    },
-    "CBT_AUTH_KEY":{
-      "required":true
-    }
+   "environments": {
+    "test": {
+      "env": {
+        "HEROKU_UAT": "enabled"
+      },
+      "CBT_USER":{
+        "required":true
+      },
+      "CBT_AUTH_KEY":{
+        "required":true
+      }
   }
 }
